initialize model weights experiment run

--- a/notebooks/2_Challenge1_Experiments.ipynb
+++ b/notebooks/2_Challenge1_Experiments.ipynb
@@ -204,6 +204,84 @@
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We introduced model weights initialization as the official implementation using kaiming_normal, and re-run the first experiment on more epochs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-11-28 17:07:41.238 | INFO     | __main__:<module>:38 - Excuting training pipeline with 30 epochs...\n",
+      "2023-11-28 17:07:41.263 | INFO     | data_prep.dataset_loader:LoadData:24 - Loading the data from ../datasets/challenge1/train\n",
+      "2023-11-28 17:07:41.365 | INFO     | data_prep.dataset_loader:LoadData:24 - Loading the data from ../datasets/challenge1/val\n",
+      "2023-11-28 17:07:41.388 | INFO     | data_prep.dataset:__init__:35 - Creating a Dataset instance for train split.\n",
+      "2023-11-28 17:07:41.388 | INFO     | data_prep.dataset:__init__:35 - Creating a Dataset instance for val split.\n",
+      "2023-11-28 17:07:41.780 | INFO     | experiments.ClassifierExperiment:__init__:57 - Creating a classifier experiment using VGG16_BN_Attention network.\n",
+      "2023-11-28 17:07:51.702 | INFO     | networks.VGG16:__init__:107 - Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "2023-11-28 17:07:59.650 | INFO     | experiments.ClassifierExperiment:run:238 - Experiment started.\n",
+      "2023-11-28 17:24:28.902 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 01/30 | epoch time: 16.0m 29.25s | lr: 1.00000e-04 | train/loss: 0.44464 | val/loss: 0.38168 | val/accuracy: 0.83430 | val/AUC: 0.83456 | val/Kappa: 0.66870\n",
+      "2023-11-28 17:38:33.944 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 02/30 | epoch time: 14.0m 5.022s | lr: 1.00000e-04 | train/loss: 0.38309 | val/loss: 0.35980 | val/accuracy: 0.84062 | val/AUC: 0.83963 | val/Kappa: 0.68055\n",
+      "2023-11-28 17:52:34.298 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 03/30 | epoch time: 14.0m 0.3512s | lr: 1.00000e-04 | train/loss: 0.36126 | val/loss: 0.34261 | val/accuracy: 0.84352 | val/AUC: 0.84377 | val/Kappa: 0.68713\n",
+      "2023-11-28 18:07:08.865 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 04/30 | epoch time: 14.0m 34.56s | lr: 1.00000e-04 | train/loss: 0.34272 | val/loss: 0.34805 | val/accuracy: 0.85300 | val/AUC: 0.85337 | val/Kappa: 0.70616\n",
+      "2023-11-28 18:07:08.868 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-28 18:22:03.732 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 05/30 | epoch time: 14.0m 54.86s | lr: 1.00000e-04 | train/loss: 0.33512 | val/loss: 0.33835 | val/accuracy: 0.85432 | val/AUC: 0.85480 | val/Kappa: 0.70886\n",
+      "2023-11-28 18:36:24.869 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 06/30 | epoch time: 14.0m 21.13s | lr: 1.00000e-04 | train/loss: 0.31957 | val/loss: 0.33796 | val/accuracy: 0.85142 | val/AUC: 0.85155 | val/Kappa: 0.70286\n",
+      "2023-11-28 18:50:53.634 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 07/30 | epoch time: 14.0m 28.76s | lr: 1.00000e-04 | train/loss: 0.30861 | val/loss: 0.32840 | val/accuracy: 0.85801 | val/AUC: 0.85731 | val/Kappa: 0.71556\n",
+      "2023-11-28 19:05:53.746 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 08/30 | epoch time: 15.0m 0.1083s | lr: 1.00000e-04 | train/loss: 0.30412 | val/loss: 0.30080 | val/accuracy: 0.87460 | val/AUC: 0.87436 | val/Kappa: 0.74903\n",
+      "2023-11-28 19:21:48.274 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 09/30 | epoch time: 15.0m 54.53s | lr: 1.00000e-04 | train/loss: 0.28958 | val/loss: 0.33215 | val/accuracy: 0.85353 | val/AUC: 0.85221 | val/Kappa: 0.70622\n",
+      "2023-11-28 19:21:48.276 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-28 19:36:38.687 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 10/30 | epoch time: 14.0m 50.41s | lr: 1.00000e-04 | train/loss: 0.28695 | val/loss: 0.33678 | val/accuracy: 0.84747 | val/AUC: 0.84652 | val/Kappa: 0.69430\n",
+      "2023-11-28 19:36:38.689 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 2 out of 5\n",
+      "2023-11-28 19:51:14.349 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 11/30 | epoch time: 14.0m 35.66s | lr: 1.00000e-04 | train/loss: 0.27773 | val/loss: 0.29645 | val/accuracy: 0.87540 | val/AUC: 0.87501 | val/Kappa: 0.75054\n",
+      "2023-11-28 20:05:49.366 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 12/30 | epoch time: 14.0m 35.01s | lr: 1.00000e-04 | train/loss: 0.26992 | val/loss: 0.30154 | val/accuracy: 0.87645 | val/AUC: 0.87625 | val/Kappa: 0.75274\n",
+      "2023-11-28 20:05:49.368 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-28 20:22:24.664 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 13/30 | epoch time: 16.0m 35.29s | lr: 1.00000e-04 | train/loss: 0.26184 | val/loss: 0.28960 | val/accuracy: 0.87882 | val/AUC: 0.87841 | val/Kappa: 0.75738\n",
+      "2023-11-28 20:36:26.600 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 14/30 | epoch time: 14.0m 1.932s | lr: 1.00000e-04 | train/loss: 0.25735 | val/loss: 0.30609 | val/accuracy: 0.87171 | val/AUC: 0.87201 | val/Kappa: 0.74351\n",
+      "2023-11-28 20:36:26.602 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-28 20:50:18.895 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 15/30 | epoch time: 13.0m 52.29s | lr: 1.00000e-04 | train/loss: 0.24644 | val/loss: 0.30521 | val/accuracy: 0.87381 | val/AUC: 0.87372 | val/Kappa: 0.74752\n",
+      "2023-11-28 20:50:18.897 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 2 out of 5\n",
+      "2023-11-28 21:04:18.066 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 16/30 | epoch time: 13.0m 59.17s | lr: 1.00000e-04 | train/loss: 0.24304 | val/loss: 0.29506 | val/accuracy: 0.87856 | val/AUC: 0.87809 | val/Kappa: 0.75683\n",
+      "2023-11-28 21:04:18.069 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 3 out of 5\n",
+      "2023-11-28 21:18:21.322 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 17/30 | epoch time: 14.0m 3.251s | lr: 1.00000e-04 | train/loss: 0.23787 | val/loss: 0.33919 | val/accuracy: 0.85880 | val/AUC: 0.85984 | val/Kappa: 0.71812\n",
+      "2023-11-28 21:18:21.324 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 4 out of 5\n",
+      "2023-11-28 21:32:54.343 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 18/30 | epoch time: 14.0m 33.02s | lr: 1.00000e-04 | train/loss: 0.23127 | val/loss: 0.28921 | val/accuracy: 0.87724 | val/AUC: 0.87631 | val/Kappa: 0.75397\n",
+      "2023-11-28 21:47:00.414 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 19/30 | epoch time: 14.0m 6.068s | lr: 1.00000e-04 | train/loss: 0.22717 | val/loss: 0.29211 | val/accuracy: 0.88066 | val/AUC: 0.88066 | val/Kappa: 0.76127\n",
+      "2023-11-28 21:47:00.417 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-28 22:00:48.042 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 20/30 | epoch time: 13.0m 47.62s | lr: 1.00000e-04 | train/loss: 0.21986 | val/loss: 0.29665 | val/accuracy: 0.87987 | val/AUC: 0.87932 | val/Kappa: 0.75943\n",
+      "2023-11-28 22:00:48.044 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 2 out of 5\n",
+      "2023-11-28 22:15:13.069 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 21/30 | epoch time: 14.0m 25.02s | lr: 1.00000e-04 | train/loss: 0.21286 | val/loss: 0.29721 | val/accuracy: 0.87935 | val/AUC: 0.87904 | val/Kappa: 0.75849\n",
+      "2023-11-28 22:15:13.072 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 3 out of 5\n",
+      "2023-11-28 22:29:53.649 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 22/30 | epoch time: 14.0m 40.58s | lr: 1.00000e-04 | train/loss: 0.21292 | val/loss: 0.31480 | val/accuracy: 0.87777 | val/AUC: 0.87803 | val/Kappa: 0.75561\n",
+      "2023-11-28 22:29:53.651 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 4 out of 5\n",
+      "2023-11-28 22:44:16.075 | INFO     | experiments.ClassifierExperiment:run:253 - Epoch: 23/30 | epoch time: 14.0m 22.42s | lr: 1.00000e-04 | train/loss: 0.20842 | val/loss: 0.30428 | val/accuracy: 0.87487 | val/AUC: 0.87362 | val/Kappa: 0.74905\n",
+      "2023-11-28 22:44:16.078 | INFO     | callbacks.early_stopping:early_stop:27 - EarlyStopping counter: 5 out of 5\n",
+      "2023-11-28 22:44:16.082 | INFO     | callbacks.early_stopping:save_checkpoint:38 - Saving model parameters...\n",
+      "2023-11-28 22:44:20.097 | INFO     | experiments.ClassifierExperiment:run:274 - Run complete. Total time: 05:36:20\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = 'python ../train.py --train_path \"../datasets/challenge1/train\" \\\n",
+    "                        --valid_path \"../datasets/challenge1/val\" \\\n",
+    "                        --experiment_name \"ClassifierExperiment\" \\\n",
+    "                        --network_name \"VGG16_BN_Attention\" \\\n",
+    "                        --max_epochs \"30\" \\\n",
+    "                        --batch_size \"32\" \\\n",
+    "                        --verbose \"1\"'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
   }
  ],
  "metadata": {
