--- a/notebooks/2_Challenge1_Experiments.ipynb
+++ b/notebooks/2_Challenge1_Experiments.ipynb
@@ -282,6 +282,115 @@
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experimenting `AdvancedHairAugmentation` in the transformation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-11-30 17:44:20.598 | INFO     | __main__:<module>:38 - Excuting training pipeline with 30 epochs...\n",
+      "2023-11-30 17:44:20.629 | INFO     | data_prep.dataset_loader:LoadData:24 - Loading the data from ../datasets/challenge1/train\n",
+      "2023-11-30 17:44:20.706 | INFO     | data_prep.dataset_loader:LoadData:24 - Loading the data from ../datasets/challenge1/val\n",
+      "2023-11-30 17:44:20.727 | INFO     | data_prep.dataset:__init__:35 - Creating a Dataset instance for train split.\n",
+      "2023-11-30 17:44:20.727 | INFO     | data_prep.dataset:__init__:35 - Creating a Dataset instance for val split.\n",
+      "2023-11-30 17:44:20.791 | INFO     | experiments.ClassifierExperiment:__init__:65 - Creating a classifier experiment using VGG16_BN_Attention network.\n",
+      "2023-11-30 17:44:31.335 | INFO     | networks.VGG16:__init__:107 - Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "2023-11-30 17:44:34.680 | INFO     | experiments.ClassifierExperiment:run:352 - Experiment started.\n",
+      "2023-11-30 18:02:54.177 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from inf to 0.371382. Saving model ...\n",
+      "2023-11-30 18:02:54.693 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 01/30 | epoch time: 18.0m 19.49s | lr: 1.00000e-04 | train/loss: 0.44285 | val/loss: 0.37138 | val/accuracy: 0.83693 | val/AUC: 0.83703 | val/Kappa: 0.67386\n",
+      "2023-11-30 18:18:37.608 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.371382 to 0.356639. Saving model ...\n",
+      "2023-11-30 18:18:37.870 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 02/30 | epoch time: 15.0m 42.91s | lr: 1.00000e-04 | train/loss: 0.38084 | val/loss: 0.35664 | val/accuracy: 0.84826 | val/AUC: 0.84744 | val/Kappa: 0.69596\n",
+      "2023-11-30 18:35:22.804 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.356639 to 0.333056. Saving model ...\n",
+      "2023-11-30 18:35:23.543 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 03/30 | epoch time: 16.0m 44.93s | lr: 1.00000e-04 | train/loss: 0.35913 | val/loss: 0.33306 | val/accuracy: 0.85564 | val/AUC: 0.85576 | val/Kappa: 0.71128\n",
+      "2023-11-30 18:55:39.189 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-30 18:55:39.190 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 04/30 | epoch time: 20.0m 15.64s | lr: 1.00000e-04 | train/loss: 0.34069 | val/loss: 0.35323 | val/accuracy: 0.84563 | val/AUC: 0.84641 | val/Kappa: 0.69167\n",
+      "2023-11-30 19:17:34.888 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.333056 to 0.314991. Saving model ...\n",
+      "2023-11-30 19:17:35.206 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 05/30 | epoch time: 21.0m 55.69s | lr: 1.00000e-04 | train/loss: 0.33553 | val/loss: 0.31499 | val/accuracy: 0.86091 | val/AUC: 0.86012 | val/Kappa: 0.72131\n",
+      "2023-11-30 19:35:19.597 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-30 19:35:19.617 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 06/30 | epoch time: 17.0m 44.39s | lr: 1.00000e-04 | train/loss: 0.32107 | val/loss: 0.32611 | val/accuracy: 0.85116 | val/AUC: 0.85131 | val/Kappa: 0.70235\n",
+      "2023-11-30 20:09:05.031 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 2 out of 5\n",
+      "2023-11-30 20:09:05.036 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 07/30 | epoch time: 33.0m 45.41s | lr: 1.00000e-04 | train/loss: 0.30881 | val/loss: 0.32233 | val/accuracy: 0.86301 | val/AUC: 0.86199 | val/Kappa: 0.72541\n",
+      "2023-11-30 20:25:37.764 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.314991 to 0.302132. Saving model ...\n",
+      "2023-11-30 20:25:38.094 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 08/30 | epoch time: 16.0m 32.72s | lr: 1.00000e-04 | train/loss: 0.30284 | val/loss: 0.30213 | val/accuracy: 0.87171 | val/AUC: 0.87126 | val/Kappa: 0.74313\n",
+      "2023-11-30 20:44:22.827 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-30 20:44:22.837 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 09/30 | epoch time: 18.0m 44.72s | lr: 1.00000e-04 | train/loss: 0.29841 | val/loss: 0.32310 | val/accuracy: 0.85643 | val/AUC: 0.85528 | val/Kappa: 0.71213\n",
+      "2023-11-30 21:01:00.166 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 2 out of 5\n",
+      "2023-11-30 21:01:00.168 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 10/30 | epoch time: 16.0m 37.33s | lr: 1.00000e-04 | train/loss: 0.28994 | val/loss: 0.33192 | val/accuracy: 0.85511 | val/AUC: 0.85404 | val/Kappa: 0.70954\n",
+      "2023-11-30 21:21:06.595 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 3 out of 5\n",
+      "2023-11-30 21:21:06.602 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 11/30 | epoch time: 20.0m 6.423s | lr: 1.00000e-04 | train/loss: 0.27868 | val/loss: 0.39811 | val/accuracy: 0.83641 | val/AUC: 0.83414 | val/Kappa: 0.67126\n",
+      "2023-11-30 21:41:15.695 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 4 out of 5\n",
+      "2023-11-30 21:41:15.701 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 12/30 | epoch time: 20.0m 9.089s | lr: 1.00000e-04 | train/loss: 0.27086 | val/loss: 0.34025 | val/accuracy: 0.85774 | val/AUC: 0.85859 | val/Kappa: 0.71591\n",
+      "2023-11-30 21:57:45.881 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.302132 to 0.290709. Saving model ...\n",
+      "2023-11-30 21:57:46.212 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 13/30 | epoch time: 16.0m 30.18s | lr: 1.00000e-04 | train/loss: 0.26695 | val/loss: 0.29071 | val/accuracy: 0.87460 | val/AUC: 0.87378 | val/Kappa: 0.74874\n",
+      "2023-11-30 22:14:13.661 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-30 22:14:13.664 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 14/30 | epoch time: 16.0m 27.44s | lr: 1.00000e-04 | train/loss: 0.26197 | val/loss: 0.29955 | val/accuracy: 0.87250 | val/AUC: 0.87227 | val/Kappa: 0.74482\n",
+      "2023-11-30 22:30:08.893 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 2 out of 5\n",
+      "2023-11-30 22:30:08.894 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 15/30 | epoch time: 15.0m 55.23s | lr: 1.00000e-04 | train/loss: 0.25214 | val/loss: 0.31336 | val/accuracy: 0.86591 | val/AUC: 0.86572 | val/Kappa: 0.73166\n",
+      "2023-11-30 22:46:03.054 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 3 out of 5\n",
+      "2023-11-30 22:46:03.056 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 16/30 | epoch time: 15.0m 54.16s | lr: 1.00000e-04 | train/loss: 0.24926 | val/loss: 0.29244 | val/accuracy: 0.88093 | val/AUC: 0.88065 | val/Kappa: 0.76167\n",
+      "2023-11-30 23:06:40.251 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 4 out of 5\n",
+      "2023-11-30 23:06:40.252 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 17/30 | epoch time: 20.0m 37.19s | lr: 1.00000e-04 | train/loss: 0.24024 | val/loss: 0.29218 | val/accuracy: 0.87987 | val/AUC: 0.88008 | val/Kappa: 0.75979\n",
+      "2023-11-30 23:22:40.077 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.290709 to 0.283091. Saving model ...\n",
+      "2023-11-30 23:22:40.387 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 18/30 | epoch time: 15.0m 59.82s | lr: 1.00000e-04 | train/loss: 0.23810 | val/loss: 0.28309 | val/accuracy: 0.88330 | val/AUC: 0.88240 | val/Kappa: 0.76612\n",
+      "2023-11-30 23:40:24.501 | INFO     | callbacks.early_stopping:save_checkpoint:55 - Valid loss improved from 0.283091 to 0.281840. Saving model ...\n",
+      "2023-11-30 23:40:24.795 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 19/30 | epoch time: 17.0m 44.11s | lr: 1.00000e-04 | train/loss: 0.23527 | val/loss: 0.28184 | val/accuracy: 0.88014 | val/AUC: 0.87984 | val/Kappa: 0.76008\n",
+      "2023-11-30 23:57:15.608 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 1 out of 5\n",
+      "2023-11-30 23:57:15.609 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 20/30 | epoch time: 16.0m 50.81s | lr: 1.00000e-04 | train/loss: 0.23116 | val/loss: 0.28309 | val/accuracy: 0.88040 | val/AUC: 0.87994 | val/Kappa: 0.76053\n",
+      "2023-12-01 00:14:33.270 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 2 out of 5\n",
+      "2023-12-01 00:14:33.271 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 21/30 | epoch time: 17.0m 17.66s | lr: 1.00000e-04 | train/loss: 0.22428 | val/loss: 0.30116 | val/accuracy: 0.87513 | val/AUC: 0.87514 | val/Kappa: 0.75021\n",
+      "2023-12-01 00:31:55.840 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 3 out of 5\n",
+      "2023-12-01 00:31:55.841 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 22/30 | epoch time: 17.0m 22.57s | lr: 1.00000e-04 | train/loss: 0.21849 | val/loss: 0.30699 | val/accuracy: 0.87803 | val/AUC: 0.87802 | val/Kappa: 0.75600\n",
+      "2023-12-01 00:48:46.976 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 4 out of 5\n",
+      "2023-12-01 00:48:46.977 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 23/30 | epoch time: 16.0m 51.13s | lr: 1.00000e-04 | train/loss: 0.21234 | val/loss: 0.28396 | val/accuracy: 0.88672 | val/AUC: 0.88651 | val/Kappa: 0.77330\n",
+      "2023-12-01 01:05:52.365 | INFO     | callbacks.early_stopping:__call__:46 - EarlyStopping counter: 5 out of 5\n",
+      "2023-12-01 01:05:52.366 | INFO     | experiments.ClassifierExperiment:run:374 - Epoch: 24/30 | epoch time: 17.0m 5.386s | lr: 1.00000e-04 | train/loss: 0.21156 | val/loss: 0.28682 | val/accuracy: 0.88462 | val/AUC: 0.88357 | val/Kappa: 0.76869\n",
+      "2023-12-01 01:05:52.368 | WARNING  | experiments.ClassifierExperiment:run:380 - Early stopping triggered at epoch 24. Ending model training.\n",
+      "2023-12-01 01:05:52.370 | INFO     | experiments.ClassifierExperiment:run_test:240 - Testing...\n",
+      "2023-12-01 01:07:16.521 | INFO     | experiments.ClassifierExperiment:run_test:295 - Test Accuracy: 0.88462\n",
+      "2023-12-01 01:07:16.522 | INFO     | experiments.ClassifierExperiment:run_test:296 - Test AUC: 0.88357\n",
+      "2023-12-01 01:07:16.523 | INFO     | experiments.ClassifierExperiment:run_test:297 - Test Kappa: 0.76869\n",
+      "2023-12-01 01:07:16.523 | INFO     | experiments.ClassifierExperiment:run_test:301 - Target 0 - Precision: 0.84705, Recall: 0.94355, F-score: 0.89270, Support: 1931\n",
+      "2023-12-01 01:07:16.524 | INFO     | experiments.ClassifierExperiment:run_test:301 - Target 1 - Precision: 0.93374, Recall: 0.82359, F-score: 0.87521, Support: 1865\n",
+      "2023-12-01 01:07:16.524 | INFO     | experiments.ClassifierExperiment:run_test:303 - \n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.94      0.89      1931\n",
+      "           1       0.93      0.82      0.88      1865\n",
+      "\n",
+      "    accuracy                           0.88      3796\n",
+      "   macro avg       0.89      0.88      0.88      3796\n",
+      "weighted avg       0.89      0.88      0.88      3796\n",
+      "\n",
+      "2023-12-01 01:07:16.528 | INFO     | experiments.ClassifierExperiment:run_test:327 - \n",
+      "Testing complete.\n",
+      "2023-12-01 01:07:16.529 | INFO     | experiments.ClassifierExperiment:run:387 - Run complete. Total time: 07:22:41\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = 'python ../train.py --train_path \"../datasets/challenge1/train\" \\\n",
+    "                        --valid_path \"../datasets/challenge1/val\" \\\n",
+    "                        --experiment_name \"ClassifierExperiment\" \\\n",
+    "                        --network_name \"VGG16_BN_Attention\" \\\n",
+    "                        --max_epochs \"30\" \\\n",
+    "                        --batch_size \"32\" \\\n",
+    "                        --verbose \"1\"'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
   }
  ],
  "metadata": {
