--- a/notebooks/3_segmentation.ipynb
+++ b/notebooks/3_segmentation.ipynb
@@ -465,12 +465,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "cc06d813-6502-40cc-aea9-178ddb085092",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0, 255], dtype=uint8)"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(segmentation)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f6dc84e7-d602-4fa2-8f68-2aa10943f247",
    "metadata": {},
    "source": [
     "- Firstly move this working pipeline into a function.\n",
     "- Then, implement multi-scale segmentation, where the image is segmented in different scales (zooms), and results are combined togather."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67c992a0-e9a2-490e-8071-c37b9a574d42",
+   "metadata": {},
+   "source": [
+    "\n",
+    "- Combining could be like:\n",
+    "  1. create different segmentation of the image (they will have different sizes (shapes) of the original image (white:bg, black:mask)\n",
+    "  2. create a white frame of the same image size, like the last step of the current implementation.\n",
+    "  3. multiply all masks, this combines all the masks togather (or any other approach), try one by one."
    ]
   }
  ],
