--- a/notebooks/3_segmentation.ipynb
+++ b/notebooks/3_segmentation.ipynb
@@ -503,7 +503,7 @@
     "- Combining could be like:\n",
     "  1. create different segmentation of the image (they will have different sizes (shapes) of the original image (white:bg, black:mask)\n",
     "  2. create a white frame of the same image size, like the last step of the current implementation.\n",
-    "  3. multiply all masks, this combines all the masks togather (or any other approach), try one by one."
+    "  3. multiply all masks, this combines all the masks togather (or any other approach), try one by one, might need to convert from [0,255] to [0,1]."
    ]
   }
  ],
