finished experimenting kfold ensemble (acc:92.3076, auc: 92.2558, kappa: 84.5954)

--- a/notebooks/4_kflod_ensemble_experimenting.ipynb
+++ b/notebooks/4_kflod_ensemble_experimenting.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 1,
    "id": "cb491c47-7a4f-49d5-bc28-670f3f1b9a41",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "b972a00d-6922-4a6d-baf8-7a7d322f54c1",
    "metadata": {},
    "outputs": [
@@ -81,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "id": "12cb834a-8b42-4acf-9d0b-79fed26ebf1a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<data_prep.dataset.Dataset at 0x7fdd300b77c0>"
+       "<data_prep.dataset.Dataset at 0x7f8ec9209cf0>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "id": "64ae99cf-fc47-42cc-84a5-c64715015c69",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x7fdd7705ce20>"
+       "<torch.utils.data.dataloader.DataLoader at 0x7f8ec920a320>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 5,
    "id": "3a85ed32-37f8-4084-a107-93cbf35e9f0e",
    "metadata": {},
    "outputs": [
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "id": "b16048b9-ba9d-498d-88a0-139a77ec64df",
    "metadata": {},
    "outputs": [
@@ -162,7 +153,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "3f34f618-fc89-4d69-8228-f606a9844286",
    "metadata": {},
    "outputs": [
@@ -1256,19 +1247,19 @@
        "networks.VGG16.VGG16_BN_Attention"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# network = getNetwork('VGG16_BN_Attention')\n",
-    "# network"
+    "network = getNetwork('VGG16_BN_Attention')\n",
+    "network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "id": "5a1439b0-4050-4712-b8ca-f97e7323e456",
    "metadata": {},
    "outputs": [],
@@ -1278,43 +1269,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "id": "b8777e28-a6b1-43b5-9bf6-3caabeef38f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['fold_1', 'fold_2', 'fold_3', 'fold_4']"
+       "['fold_1', 'fold_2', 'fold_3', 'fold_4', 'fold_5']"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_path = 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-02_1727_VGG16_BN_Attention'\n",
+    "output_path = 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention'\n",
     "\n",
     "os.listdir(output_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "id": "8688a459-d4e4-45f7-80be-9f7189c2c314",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-02_1727_VGG16_BN_Attention/fold_1/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold1.pth',\n",
-       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-02_1727_VGG16_BN_Attention/fold_2/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold2.pth',\n",
-       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-02_1727_VGG16_BN_Attention/fold_3/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold3.pth',\n",
-       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-02_1727_VGG16_BN_Attention/fold_4/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold4.pth']"
+       "['outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention/fold_1/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold1.pth',\n",
+       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention/fold_2/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold2.pth',\n",
+       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention/fold_3/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold3.pth',\n",
+       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention/fold_4/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold4.pth',\n",
+       " 'outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention/fold_5/ClassifierExperimentCV_224_VGG16_BN_Attention_epo20_bs32_lr0.0001_seed42_fold5.pth']"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "id": "ede19910-55f8-499b-a400-f5e675307f87",
    "metadata": {},
    "outputs": [],
@@ -1340,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "id": "d6a8c8de-12b8-4312-85f7-ebc084d02c4e",
    "metadata": {},
    "outputs": [
@@ -1350,30 +1342,32 @@
      "text": [
       "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
       "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
       "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n"
      ]
     }
    ],
    "source": [
     "# Load all models\n",
-    "models = [network(num_classes=2) for _ in range(len(models_paths[:3]))]\n",
-    "for i, path in enumerate(models_paths[:3]):\n",
+    "models = [network(num_classes=2) for _ in range(len(models_paths))]\n",
+    "for i, path in enumerate(models_paths):\n",
     "    load_model(models[i], path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "id": "1f6fce41-09f6-438f-9c49-35c814f2d269",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[], [], []]"
+       "[[], [], [], [], []]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 20,
    "id": "8c84ed07-774e-4c86-b12a-9130087905d7",
    "metadata": {},
    "outputs": [],
@@ -1396,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 21,
    "id": "ed7bb8e7-1257-4885-83e6-87574025ed26",
    "metadata": {},
    "outputs": [
@@ -1404,7 +1398,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 119/119 [22:20<00:00, 11.26s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 119/119 [34:07<00:00, 17.20s/it]\n"
      ]
     }
    ],
@@ -1421,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 22,
    "id": "bfda7f1f-4bec-4fcc-b891-5058e1a9f02b",
    "metadata": {},
    "outputs": [],
@@ -1431,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 23,
    "id": "7c9e1136-3c31-4714-901e-83cb63997d04",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1435,7 @@
        "(3796,)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 24,
    "id": "cc6d7aeb-c43a-4071-a4c0-86bc9506292b",
    "metadata": {},
    "outputs": [],
@@ -1462,17 +1456,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 25,
    "id": "e1c600d8-350b-47b6-a8ff-0202fa697aae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 3796)"
+       "(5, 3796)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 26,
    "id": "a4130ccc-9d91-460e-9864-0ea92a3bf57c",
    "metadata": {},
    "outputs": [],
@@ -1493,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 27,
    "id": "51eba0cb-f805-40ed-8da3-48b177ce83f5",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1497,7 @@
        "(3796,)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1514,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 28,
    "id": "51fdb139-a5dd-49bf-84f7-9e539f40f823",
    "metadata": {},
    "outputs": [
@@ -1522,9 +1516,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble Accuracy: 0.922813487881981\n",
-      "Ensemble Cohen's Kappa: 0.8453805222731522\n",
-      "Ensemble AUC: 0.9221441334623602\n"
+      "Ensemble Accuracy: 0.9230769230769231\n",
+      "Ensemble Cohen's Kappa: 0.8459548756987352\n",
+      "Ensemble AUC: 0.9225588430892604\n"
      ]
     }
    ],
